fixed logo padding and text align

--- a/label_studio/core/static/css/login.css
+++ b/label_studio/core/static/css/login.css
@@ -164,6 +164,7 @@ html, body {
   font-weight: 400;
   line-height: 16px;
   letter-spacing: 0.4px;
+  text-align: right;
 }
 
 .login_page_new_ui .tips {
@@ -214,6 +215,10 @@ html, body {
   font-weight: 500;
   line-height: 20px;
   letter-spacing: 0.25px;
+}
+
+.sbulogo {
+  padding-bottom: 40px;
 }
 
 .login_page_new_ui .tips .description a:hover {
